k8s/api-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/custom-http-errors: "400,404,500"
    nginx.ingress.kubernetes.io/default-backend: "app-custom-error-page-service"
  name: app-service-ingress
  #namespace: ingress-nginx
spec:
  tls:
    - secretName: misoboy-kr-tls
  rules:
    - host: "dev.misoboy.kr"
      http:
        paths:
          - path: /api
            backend:
              serviceName: app-api-service-active
              servicePort: 8080
